--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
         with:
-          ref: exampleSite
+          ref: main
 
       - name: Get Theme
         run: git submodule update --init --recursive
@@ -37,5 +37,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
