--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://adityatelange.github.io/hugo-PaperMod/"
-title: PaperMod
+baseURL: "solamarpreet.github.io"
+title: Sol's Blog
 paginate: 5
 theme: PaperMod
 
