--- a/config.yml
+++ b/config.yml
@@ -58,8 +58,8 @@ params:
 
     profileMode:
         enabled: true
-        Title: Amarpreet Singh
-        Content: >
+        title: Amarpreet Singh
+        subtitle: >
             Cybersecurity engineer with expertise in Python, DevSecOps, OSINT and Incident Response.
             I also love reading, swimming, table tennis & badminton.  
         imageUrl: "solpic.jpeg"
@@ -80,11 +80,13 @@ params:
 
     socialIcons:
         - name: github
-          url: "https://github.com/adityatelange/hugo-PaperMod"
-        - name: KoFi
-          url: "https://ko-fi.com/adityatelange"
-        - name: RsS
+          url: "https://github.com/solamarpreet"
+        - name: linkedin
+          url: "https://www.linkedin.com"
+        - name: Rss
           url: "index.xml"
+        - name: email
+          url: "mailto:solamarpreet@gmail.com"
 
     editPost:
         URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
