Added color for subtitle via PaperMod repo and minor changes

--- a/config.yml
+++ b/config.yml
@@ -39,8 +39,8 @@ outputs:
 
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
-    author: Theme PaperMod
+    description: "Amarpreet Singh - Cybersecurity Engineer & Researcher"
+    author: Amarpreet Singh
     # author: ["Me", "You"] # multiple authors
 
     defaultTheme: auto
