--- a/config.yml
+++ b/config.yml
@@ -48,7 +48,7 @@ params:
 
     defaultTheme: auto
     # disableThemeToggle: true
-    ShowShareButtons: true
+    ShowShareButtons: false
     ShowReadingTime: true
     # disableSpecial1stPost: true
     displayFullLangName: true
@@ -57,7 +57,7 @@ params:
     ShowCodeCopyButtons: true
     ShowToc: true
     # comments: false
-    images: ["solpic.png"]
+    images: ["solpic.jpeg"]
 
     profileMode:
         enabled: true
