--- a/config.yml
+++ b/config.yml
@@ -89,7 +89,7 @@ params:
         - name: Rss
           url: "index.xml"
         - name: email
-          url: "mailto:solamarpreet@gmail.com"
+          url: "mailto:solamarpreet@protonmail.com"
 
     # label:
     #     text: "Home"
