--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: main
 
+      - name: Add username and email
+        run: |
+          git config user.name Amarpreet Singh
+          git config user.email solamarpreet@gmail.com
+
       - name: Get Theme
         run: git submodule update --init --recursive
+
+      - name: Update Theme
+        run: git submodule update --remote --merge
 
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
